src/main/gram.output
Terminals unused in grammar

   ERROR
   INCOMPLETE_STRING
   COMMENT
   LINE_DIRECTIVE
   SYMBOL_FORMALS
   EQ_FORMALS
   EQ_SUB
   SYMBOL_SUB
   SYMBOL_FUNCTION_CALL
   SYMBOL_PACKAGE
   COLON_ASSIGN
   SLOT
   NOT
   UPLUS


State 27 conflicts: 28 shift/reduce
State 54 conflicts: 5 reduce/reduce
State 60 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 131 conflicts: 2 reduce/reduce
State 137 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce
State 153 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce
State 156 conflicts: 1 shift/reduce
State 157 conflicts: 1 shift/reduce
State 158 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce
State 160 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 162 conflicts: 1 shift/reduce
State 163 conflicts: 1 shift/reduce
State 164 conflicts: 1 shift/reduce
State 171 conflicts: 27 shift/reduce
State 225 conflicts: 5 reduce/reduce
State 230 conflicts: 5 reduce/reduce


Grammar

    0 $accept: prog $end

    1 prog: END_OF_INPUT
    2     | '\n'
    3     | expr_or_assign '\n'
    4     | expr_or_assign ';'
    5     | error

    6 expr_or_assign: expr
    7               | equal_assign

    8 equal_assign: expr EQ_ASSIGN expr_or_assign

    9 expr: NUM_CONST
   10     | STR_CONST
   11     | NULL_CONST
   12     | SYMBOL
   13     | annotated_symbol
   14     | '{' exprlist '}'
   15     | '(' expr_or_assign ')'
   16     | '-' expr
   17     | '+' expr
   18     | '!' expr
   19     | '~' expr
   20     | '?' expr
   21     | expr ':' expr
   22     | expr '+' expr
   23     | expr '-' expr
   24     | expr '*' expr
   25     | expr '/' expr
   26     | expr '^' expr
   27     | expr SPECIAL expr
   28     | expr '%' expr
   29     | expr '~' expr
   30     | expr '?' expr
   31     | expr LT expr
   32     | expr LE expr
   33     | expr EQ expr
   34     | expr NE expr
   35     | expr GE expr
   36     | expr GT expr
   37     | expr AND expr
   38     | expr OR expr
   39     | expr AND2 expr
   40     | expr OR2 expr
   41     | expr LEFT_ASSIGN expr
   42     | expr RIGHT_ASSIGN expr
   43     | FUNCTION '(' formlist ')' cr expr_or_assign
   44     | FUNCTION '(' formlist ')' cr ANNOTATION_OPERATOR datatype cr expr_or_assign
   45     | FUNCTION '(' formlist ')' cr DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END cr expr_or_assign
   46     | expr '(' sublist ')'
   47     | IF ifcond expr_or_assign
   48     | IF ifcond expr_or_assign ELSE expr_or_assign
   49     | FOR forcond expr_or_assign
   50     | WHILE cond expr_or_assign
   51     | REPEAT expr_or_assign
   52     | expr LBB sublist ']' ']'
   53     | expr '[' sublist ']'
   54     | SYMBOL NS_GET SYMBOL
   55     | SYMBOL NS_GET STR_CONST
   56     | STR_CONST NS_GET SYMBOL
   57     | STR_CONST NS_GET STR_CONST
   58     | SYMBOL NS_GET_INT SYMBOL
   59     | SYMBOL NS_GET_INT STR_CONST
   60     | STR_CONST NS_GET_INT SYMBOL
   61     | STR_CONST NS_GET_INT STR_CONST
   62     | expr '$' SYMBOL
   63     | expr '$' STR_CONST
   64     | expr '@' SYMBOL
   65     | expr '@' STR_CONST
   66     | NEXT
   67     | BREAK
   68     | ANNOTATION_OPERATOR datatype
   69     | DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END

   70 cond: '(' expr ')'

   71 ifcond: '(' expr ')'

   72 forcond: '(' SYMBOL IN expr ')'

   73 exprlist: %empty
   74         | expr_or_assign
   75         | exprlist ';' expr_or_assign
   76         | exprlist ';'
   77         | exprlist '\n' expr_or_assign
   78         | exprlist '\n'

   79 sublist: sub
   80        | sublist cr ',' sub

   81 sub: %empty
   82    | expr
   83    | SYMBOL EQ_ASSIGN
   84    | SYMBOL EQ_ASSIGN expr
   85    | STR_CONST EQ_ASSIGN
   86    | STR_CONST EQ_ASSIGN expr
   87    | NULL_CONST EQ_ASSIGN
   88    | NULL_CONST EQ_ASSIGN expr

   89 formlist: %empty
   90         | SYMBOL
   91         | annotated_symbol
   92         | SYMBOL EQ_ASSIGN expr
   93         | annotated_symbol EQ_ASSIGN expr
   94         | formlist ',' SYMBOL
   95         | formlist ',' annotated_symbol
   96         | formlist ',' SYMBOL EQ_ASSIGN expr
   97         | formlist ',' annotated_symbol EQ_ASSIGN expr

   98 cr: %empty

   99 annotated_symbol: SYMBOL ANNOTATION_OPERATOR datatype
  100                 | annotated_symbol ANNOTATION_OPERATOR datatype
  101                 | SYMBOL DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END
  102                 | annotated_symbol DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END

  103 annotation: datatype
  104           | expr_or_assign

  105 datatype: atomictype
  106         | compositetype
  107         | '(' atomictype ')'
  108         | '(' compositetype ')'
  109         | unittype

  110 atomictype: SYMBOL

  111 compositetype: arraytype
  112              | listtype
  113              | functiontype
  114              | uniontype

  115 arraytype: datatype '[' sublist ']'

  116 listtype: '{' datatypelist '}'

  117 functiontype: '(' datatypelist ')' FUNCTION_OPERATOR datatype
  118             | datatype FUNCTION_OPERATOR datatype

  119 unittype: '(' ')'

  120 uniontype: datatype OR datatype

  121 datatypelist: datatype
  122             | annotated_symbol
  123             | datatypelist ',' datatype
  124             | datatypelist ',' annotated_symbol


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 3 77 78
'!' (33) 18
'$' (36) 62 63
'%' (37) 28
'(' (40) 15 43 44 45 46 70 71 72 107 108 117 119
')' (41) 15 43 44 45 46 70 71 72 107 108 117 119
'*' (42) 24
'+' (43) 17 22
',' (44) 80 94 95 96 97 123 124
'-' (45) 16 23
'/' (47) 25
':' (58) 21
';' (59) 4 75 76
'?' (63) 20 30
'@' (64) 64 65
'[' (91) 53 115
']' (93) 52 53 115
'^' (94) 26
'{' (123) 14 116
'}' (125) 14 116
'~' (126) 19 29
error (256) 5
END_OF_INPUT (258) 1
ERROR (259)
STR_CONST (260) 10 55 56 57 59 60 61 63 65 85 86
NUM_CONST (261) 9
NULL_CONST (262) 11 87 88
SYMBOL (263) 12 54 55 56 58 59 60 62 64 72 83 84 90 92 94 96 99 101
    110
FUNCTION (264) 43 44 45
INCOMPLETE_STRING (265)
LEFT_ASSIGN (266) 41
EQ_ASSIGN (267) 8 83 84 85 86 87 88 92 93 96 97
RIGHT_ASSIGN (268) 42
LBB (269) 52
FOR (270) 49
IN (271) 72
IF (272) 47 48
ELSE (273) 48
WHILE (274) 50
NEXT (275) 66
BREAK (276) 67
REPEAT (277) 51
GT (278) 36
GE (279) 35
LT (280) 31
LE (281) 32
EQ (282) 33
NE (283) 34
AND (284) 37
OR (285) 38 120
AND2 (286) 39
OR2 (287) 40
NS_GET (288) 54 55 56 57
NS_GET_INT (289) 58 59 60 61
COMMENT (290)
LINE_DIRECTIVE (291)
SYMBOL_FORMALS (292)
EQ_FORMALS (293)
EQ_SUB (294)
SYMBOL_SUB (295)
SYMBOL_FUNCTION_CALL (296)
SYMBOL_PACKAGE (297)
COLON_ASSIGN (298)
ANNOTATION_OPERATOR (299) 44 68 99 100
DELIMITED_ANNOTATION_BEGIN (300) 45 69 101 102
DELIMITED_ANNOTATION_END (301) 45 69 101 102
FUNCTION_OPERATOR (302) 117 118
SLOT (303)
LOW (304)
TILDE (305)
UNOT (306)
NOT (307)
SPECIAL (308) 27
UMINUS (309)
UPLUS (310)


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
prog (78)
    on left: 1 2 3 4 5, on right: 0
expr_or_assign (79)
    on left: 6 7, on right: 3 4 8 15 43 44 45 47 48 49 50 51 74 75
    77 104
equal_assign (80)
    on left: 8, on right: 7
expr (81)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69,
    on right: 6 8 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37 38 39 40 41 42 46 52 53 62 63 64 65 70 71 72 82
    84 86 88 92 93 96 97
cond (82)
    on left: 70, on right: 50
ifcond (83)
    on left: 71, on right: 47 48
forcond (84)
    on left: 72, on right: 49
exprlist (85)
    on left: 73 74 75 76 77 78, on right: 14 75 76 77 78
sublist (86)
    on left: 79 80, on right: 46 52 53 80 115
sub (87)
    on left: 81 82 83 84 85 86 87 88, on right: 79 80
formlist (88)
    on left: 89 90 91 92 93 94 95 96 97, on right: 43 44 45 94 95 96
    97
cr (89)
    on left: 98, on right: 43 44 45 80
annotated_symbol (90)
    on left: 99 100 101 102, on right: 13 91 93 95 97 100 102 122 124
annotation (91)
    on left: 103 104, on right: 45 69 101 102
datatype (92)
    on left: 105 106 107 108 109, on right: 44 68 99 100 103 115 117
    118 120 121 123
atomictype (93)
    on left: 110, on right: 105 107
compositetype (94)
    on left: 111 112 113 114, on right: 106 108
arraytype (95)
    on left: 115, on right: 111
listtype (96)
    on left: 116, on right: 112
functiontype (97)
    on left: 117 118, on right: 113
unittype (98)
    on left: 119, on right: 109
uniontype (99)
    on left: 120, on right: 114
datatypelist (100)
    on left: 121 122 123 124, on right: 116 117 123 124


State 0

    0 $accept: . prog $end
    1 prog: . END_OF_INPUT
    2     | . '\n'
    3     | . expr_or_assign '\n'
    4     | . expr_or_assign ';'
    5     | . error
    6 expr_or_assign: . expr
    7               | . equal_assign
    8 equal_assign: . expr EQ_ASSIGN expr_or_assign
    9 expr: . NUM_CONST
   10     | . STR_CONST
   11     | . NULL_CONST
   12     | . SYMBOL
   13     | . annotated_symbol
   14     | . '{' exprlist '}'
   15     | . '(' expr_or_assign ')'
   16     | . '-' expr
   17     | . '+' expr
   18     | . '!' expr
   19     | . '~' expr
   20     | . '?' expr
   21     | . expr ':' expr
   22     | . expr '+' expr
   23     | . expr '-' expr
   24     | . expr '*' expr
   25     | . expr '/' expr
   26     | . expr '^' expr
   27     | . expr SPECIAL expr
   28     | . expr '%' expr
   29     | . expr '~' expr
   30     | . expr '?' expr
   31     | . expr LT expr
   32     | . expr LE expr
   33     | . expr EQ expr
   34     | . expr NE expr
   35     | . expr GE expr
   36     | . expr GT expr
   37     | . expr AND expr
   38     | . expr OR expr
   39     | . expr AND2 expr
   40     | . expr OR2 expr
   41     | . expr LEFT_ASSIGN expr
   42     | . expr RIGHT_ASSIGN expr
   43     | . FUNCTION '(' formlist ')' cr expr_or_assign
   44     | . FUNCTION '(' formlist ')' cr ANNOTATION_OPERATOR datatype cr expr_or_assign
   45     | . FUNCTION '(' formlist ')' cr DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END cr expr_or_assign
   46     | . expr '(' sublist ')'
   47     | . IF ifcond expr_or_assign
   48     | . IF ifcond expr_or_assign ELSE expr_or_assign
   49     | . FOR forcond expr_or_assign
   50     | . WHILE cond expr_or_assign
   51     | . REPEAT expr_or_assign
   52     | . expr LBB sublist ']' ']'
   53     | . expr '[' sublist ']'
   54     | . SYMBOL NS_GET SYMBOL
   55     | . SYMBOL NS_GET STR_CONST
   56     | . STR_CONST NS_GET SYMBOL
   57     | . STR_CONST NS_GET STR_CONST
   58     | . SYMBOL NS_GET_INT SYMBOL
   59     | . SYMBOL NS_GET_INT STR_CONST
   60     | . STR_CONST NS_GET_INT SYMBOL
   61     | . STR_CONST NS_GET_INT STR_CONST
   62     | . expr '$' SYMBOL
   63     | . expr '$' STR_CONST
   64     | . expr '@' SYMBOL
   65     | . expr '@' STR_CONST
   66     | . NEXT
   67     | . BREAK
   68     | . ANNOTATION_OPERATOR datatype
   69     | . DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END
   99 annotated_symbol: . SYMBOL ANNOTATION_OPERATOR datatype
  100                 | . annotated_symbol ANNOTATION_OPERATOR datatype
  101                 | . SYMBOL DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END
  102                 | . annotated_symbol DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END

    error                       shift, and go to state 1
    END_OF_INPUT                shift, and go to state 2
    STR_CONST                   shift, and go to state 3
    NUM_CONST                   shift, and go to state 4
    NULL_CONST                  shift, and go to state 5
    SYMBOL                      shift, and go to state 6
    FUNCTION                    shift, and go to state 7
    FOR                         shift, and go to state 8
    IF                          shift, and go to state 9
    WHILE                       shift, and go to state 10
    NEXT                        shift, and go to state 11
    BREAK                       shift, and go to state 12
    REPEAT                      shift, and go to state 13
    ANNOTATION_OPERATOR         shift, and go to state 14
    DELIMITED_ANNOTATION_BEGIN  shift, and go to state 15
    '?'                         shift, and go to state 16
    '~'                         shift, and go to state 17
    '+'                         shift, and go to state 18
    '-'                         shift, and go to state 19
    '('                         shift, and go to state 20
    '\n'                        shift, and go to state 21
    '{'                         shift, and go to state 22
    '!'                         shift, and go to state 23

    prog              go to state 24
    expr_or_assign    go to state 25
    equal_assign      go to state 26
    expr              go to state 27
    annotated_symbol  go to state 28


State 1

    5 prog: error .

    $default  reduce using rule 5 (prog)


State 2

    1 prog: END_OF_INPUT .

    $default  reduce using rule 1 (prog)


State 3

   10 expr: STR_CONST .  [LEFT_ASSIGN, EQ_ASSIGN, RIGHT_ASSIGN, LBB, ELSE, GT, GE, LT, LE, EQ, NE, AND, OR, AND2, OR2, DELIMITED_ANNOTATION_END, '?', '~', '+', '-', '*', '/', SPECIAL, ':', '^', '$', '@', '(', '[', '\n', ';', '}', ')', '%', ']', ',']
   56     | STR_CONST . NS_GET SYMBOL
   57     | STR_CONST . NS_GET STR_CONST
   60     | STR_CONST . NS_GET_INT SYMBOL
   61     | STR_CONST . NS_GET_INT STR_CONST

    NS_GET      shift, and go to state 29
    NS_GET_INT  shift, and go to state 30

    $default  reduce using rule 10 (expr)


State 4

    9 expr: NUM_CONST .

    $default  reduce using rule 9 (expr)


State 5

   11 expr: NULL_CONST .

    $default  reduce using rule 11 (expr)


State 6

   12 expr: SYMBOL .  [LEFT_ASSIGN, EQ_ASSIGN, RIGHT_ASSIGN, LBB, ELSE, GT, GE, LT, LE, EQ, NE, AND, OR, AND2, OR2, DELIMITED_ANNOTATION_END, '?', '~', '+', '-', '*', '/', SPECIAL, ':', '^', '$', '@', '(', '[', '\n', ';', '}', ')', '%', ']', ',']
   54     | SYMBOL . NS_GET SYMBOL
   55     | SYMBOL . NS_GET STR_CONST
   58     | SYMBOL . NS_GET_INT SYMBOL
   59     | SYMBOL . NS_GET_INT STR_CONST
   99 annotated_symbol: SYMBOL . ANNOTATION_OPERATOR datatype
  101                 | SYMBOL . DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END

    NS_GET                      shift, and go to state 31
    NS_GET_INT                  shift, and go to state 32
    ANNOTATION_OPERATOR         shift, and go to state 33
    DELIMITED_ANNOTATION_BEGIN  shift, and go to state 34

    $default  reduce using rule 12 (expr)


State 7

   43 expr: FUNCTION . '(' formlist ')' cr expr_or_assign
   44     | FUNCTION . '(' formlist ')' cr ANNOTATION_OPERATOR datatype cr expr_or_assign
   45     | FUNCTION . '(' formlist ')' cr DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END cr expr_or_assign

    '('  shift, and go to state 35


State 8

   49 expr: FOR . forcond expr_or_assign
   72 forcond: . '(' SYMBOL IN expr ')'

    '('  shift, and go to state 36

    forcond  go to state 37


State 9

   47 expr: IF . ifcond expr_or_assign
   48     | IF . ifcond expr_or_assign ELSE expr_or_assign
   71 ifcond: . '(' expr ')'

    '('  shift, and go to state 38

    ifcond  go to state 39


State 10

   50 expr: WHILE . cond expr_or_assign
   70 cond: . '(' expr ')'

    '('  shift, and go to state 40

    cond  go to state 41


State 11

   66 expr: NEXT .

    $default  reduce using rule 66 (expr)


State 12

   67 expr: BREAK .

    $default  reduce using rule 67 (expr)


State 13

    6 expr_or_assign: . expr
    7               | . equal_assign
    8 equal_assign: . expr EQ_ASSIGN expr_or_assign
    9 expr: . NUM_CONST
   10     | . STR_CONST
   11     | . NULL_CONST
   12     | . SYMBOL
   13     | . annotated_symbol
   14     | . '{' exprlist '}'
   15     | . '(' expr_or_assign ')'
   16     | . '-' expr
   17     | . '+' expr
   18     | . '!' expr
   19     | . '~' expr
   20     | . '?' expr
   21     | . expr ':' expr
   22     | . expr '+' expr
   23     | . expr '-' expr
   24     | . expr '*' expr
   25     | . expr '/' expr
   26     | . expr '^' expr
   27     | . expr SPECIAL expr
   28     | . expr '%' expr
   29     | . expr '~' expr
   30     | . expr '?' expr
   31     | . expr LT expr
   32     | . expr LE expr
   33     | . expr EQ expr
   34     | . expr NE expr
   35     | . expr GE expr
   36     | . expr GT expr
   37     | . expr AND expr
   38     | . expr OR expr
   39     | . expr AND2 expr
   40     | . expr OR2 expr
   41     | . expr LEFT_ASSIGN expr
   42     | . expr RIGHT_ASSIGN expr
   43     | . FUNCTION '(' formlist ')' cr expr_or_assign
   44     | . FUNCTION '(' formlist ')' cr ANNOTATION_OPERATOR datatype cr expr_or_assign
   45     | . FUNCTION '(' formlist ')' cr DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END cr expr_or_assign
   46     | . expr '(' sublist ')'
   47     | . IF ifcond expr_or_assign
   48     | . IF ifcond expr_or_assign ELSE expr_or_assign
   49     | . FOR forcond expr_or_assign
   50     | . WHILE cond expr_or_assign
   51     | . REPEAT expr_or_assign
   51     | REPEAT . expr_or_assign
   52     | . expr LBB sublist ']' ']'
   53     | . expr '[' sublist ']'
   54     | . SYMBOL NS_GET SYMBOL
   55     | . SYMBOL NS_GET STR_CONST
   56     | . STR_CONST NS_GET SYMBOL
   57     | . STR_CONST NS_GET STR_CONST
   58     | . SYMBOL NS_GET_INT SYMBOL
   59     | . SYMBOL NS_GET_INT STR_CONST
   60     | . STR_CONST NS_GET_INT SYMBOL
   61     | . STR_CONST NS_GET_INT STR_CONST
   62     | . expr '$' SYMBOL
   63     | . expr '$' STR_CONST
   64     | . expr '@' SYMBOL
   65     | . expr '@' STR_CONST
   66     | . NEXT
   67     | . BREAK
   68     | . ANNOTATION_OPERATOR datatype
   69     | . DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END
   99 annotated_symbol: . SYMBOL ANNOTATION_OPERATOR datatype
  100                 | . annotated_symbol ANNOTATION_OPERATOR datatype
  101                 | . SYMBOL DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END
  102                 | . annotated_symbol DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END

    STR_CONST                   shift, and go to state 3
    NUM_CONST                   shift, and go to state 4
    NULL_CONST                  shift, and go to state 5
    SYMBOL                      shift, and go to state 6
    FUNCTION                    shift, and go to state 7
    FOR                         shift, and go to state 8
    IF                          shift, and go to state 9
    WHILE                       shift, and go to state 10
    NEXT                        shift, and go to state 11
    BREAK                       shift, and go to state 12
    REPEAT                      shift, and go to state 13
    ANNOTATION_OPERATOR         shift, and go to state 14
    DELIMITED_ANNOTATION_BEGIN  shift, and go to state 15
    '?'                         shift, and go to state 16
    '~'                         shift, and go to state 17
    '+'                         shift, and go to state 18
    '-'                         shift, and go to state 19
    '('                         shift, and go to state 20
    '{'                         shift, and go to state 22
    '!'                         shift, and go to state 23

    expr_or_assign    go to state 42
    equal_assign      go to state 26
    expr              go to state 27
    annotated_symbol  go to state 28


State 14

   68 expr: ANNOTATION_OPERATOR . datatype
  105 datatype: . atomictype
  106         | . compositetype
  107         | . '(' atomictype ')'
  108         | . '(' compositetype ')'
  109         | . unittype
  110 atomictype: . SYMBOL
  111 compositetype: . arraytype
  112              | . listtype
  113              | . functiontype
  114              | . uniontype
  115 arraytype: . datatype '[' sublist ']'
  116 listtype: . '{' datatypelist '}'
  117 functiontype: . '(' datatypelist ')' FUNCTION_OPERATOR datatype
  118             | . datatype FUNCTION_OPERATOR datatype
  119 unittype: . '(' ')'
  120 uniontype: . datatype OR datatype

    SYMBOL  shift, and go to state 43
    '('     shift, and go to state 44
    '{'     shift, and go to state 45

    datatype       go to state 46
    atomictype     go to state 47
    compositetype  go to state 48
    arraytype      go to state 49
    listtype       go to state 50
    functiontype   go to state 51
    unittype       go to state 52
    uniontype      go to state 53


State 15

    6 expr_or_assign: . expr
    7               | . equal_assign
    8 equal_assign: . expr EQ_ASSIGN expr_or_assign
    9 expr: . NUM_CONST
   10     | . STR_CONST
   11     | . NULL_CONST
   12     | . SYMBOL
   13     | . annotated_symbol
   14     | . '{' exprlist '}'
   15     | . '(' expr_or_assign ')'
   16     | . '-' expr
   17     | . '+' expr
   18     | . '!' expr
   19     | . '~' expr
   20     | . '?' expr
   21     | . expr ':' expr
   22     | . expr '+' expr
   23     | . expr '-' expr
   24     | . expr '*' expr
   25     | . expr '/' expr
   26     | . expr '^' expr
   27     | . expr SPECIAL expr
   28     | . expr '%' expr
   29     | . expr '~' expr
   30     | . expr '?' expr
   31     | . expr LT expr
   32     | . expr LE expr
   33     | . expr EQ expr
   34     | . expr NE expr
   35     | . expr GE expr
   36     | . expr GT expr
   37     | . expr AND expr
   38     | . expr OR expr
   39     | . expr AND2 expr
   40     | . expr OR2 expr
   41     | . expr LEFT_ASSIGN expr
   42     | . expr RIGHT_ASSIGN expr
   43     | . FUNCTION '(' formlist ')' cr expr_or_assign
   44     | . FUNCTION '(' formlist ')' cr ANNOTATION_OPERATOR datatype cr expr_or_assign
   45     | . FUNCTION '(' formlist ')' cr DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END cr expr_or_assign
   46     | . expr '(' sublist ')'
   47     | . IF ifcond expr_or_assign
   48     | . IF ifcond expr_or_assign ELSE expr_or_assign
   49     | . FOR forcond expr_or_assign
   50     | . WHILE cond expr_or_assign
   51     | . REPEAT expr_or_assign
   52     | . expr LBB sublist ']' ']'
   53     | . expr '[' sublist ']'
   54     | . SYMBOL NS_GET SYMBOL
   55     | . SYMBOL NS_GET STR_CONST
   56     | . STR_CONST NS_GET SYMBOL
   57     | . STR_CONST NS_GET STR_CONST
   58     | . SYMBOL NS_GET_INT SYMBOL
   59     | . SYMBOL NS_GET_INT STR_CONST
   60     | . STR_CONST NS_GET_INT SYMBOL
   61     | . STR_CONST NS_GET_INT STR_CONST
   62     | . expr '$' SYMBOL
   63     | . expr '$' STR_CONST
   64     | . expr '@' SYMBOL
   65     | . expr '@' STR_CONST
   66     | . NEXT
   67     | . BREAK
   68     | . ANNOTATION_OPERATOR datatype
   69     | . DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END
   69     | DELIMITED_ANNOTATION_BEGIN . annotation DELIMITED_ANNOTATION_END
   99 annotated_symbol: . SYMBOL ANNOTATION_OPERATOR datatype
  100                 | . annotated_symbol ANNOTATION_OPERATOR datatype
  101                 | . SYMBOL DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END
  102                 | . annotated_symbol DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END
  103 annotation: . datatype
  104           | . expr_or_assign
  105 datatype: . atomictype
  106         | . compositetype
  107         | . '(' atomictype ')'
  108         | . '(' compositetype ')'
  109         | . unittype
  110 atomictype: . SYMBOL
  111 compositetype: . arraytype
  112              | . listtype
  113              | . functiontype
  114              | . uniontype
  115 arraytype: . datatype '[' sublist ']'
  116 listtype: . '{' datatypelist '}'
  117 functiontype: . '(' datatypelist ')' FUNCTION_OPERATOR datatype
  118             | . datatype FUNCTION_OPERATOR datatype
  119 unittype: . '(' ')'
  120 uniontype: . datatype OR datatype

    STR_CONST                   shift, and go to state 3
    NUM_CONST                   shift, and go to state 4
    NULL_CONST                  shift, and go to state 5
    SYMBOL                      shift, and go to state 54
    FUNCTION                    shift, and go to state 7
    FOR                         shift, and go to state 8
    IF                          shift, and go to state 9
    WHILE                       shift, and go to state 10
    NEXT                        shift, and go to state 11
    BREAK                       shift, and go to state 12
    REPEAT                      shift, and go to state 13
    ANNOTATION_OPERATOR         shift, and go to state 14
    DELIMITED_ANNOTATION_BEGIN  shift, and go to state 15
    '?'                         shift, and go to state 16
    '~'                         shift, and go to state 17
    '+'                         shift, and go to state 18
    '-'                         shift, and go to state 19
    '('                         shift, and go to state 55
    '{'                         shift, and go to state 56
    '!'                         shift, and go to state 23

    expr_or_assign    go to state 57
    equal_assign      go to state 26
    expr              go to state 27
    annotated_symbol  go to state 28
    annotation        go to state 58
    datatype          go to state 59
    atomictype        go to state 47
    compositetype     go to state 48
    arraytype         go to state 49
    listtype          go to state 50
    functiontype      go to state 51
    unittype          go to state 52
    uniontype         go to state 53


State 16

    9 expr: . NUM_CONST
   10     | . STR_CONST
   11     | . NULL_CONST
   12     | . SYMBOL
   13     | . annotated_symbol
   14     | . '{' exprlist '}'
   15     | . '(' expr_or_assign ')'
   16     | . '-' expr
   17     | . '+' expr
   18     | . '!' expr
   19     | . '~' expr
   20     | . '?' expr
   20     | '?' . expr
   21     | . expr ':' expr
   22     | . expr '+' expr
   23     | . expr '-' expr
   24     | . expr '*' expr
   25     | . expr '/' expr
   26     | . expr '^' expr
   27     | . expr SPECIAL expr
   28     | . expr '%' expr
   29     | . expr '~' expr
   30     | . expr '?' expr
   31     | . expr LT expr
   32     | . expr LE expr
   33     | . expr EQ expr
   34     | . expr NE expr
   35     | . expr GE expr
   36     | . expr GT expr
   37     | . expr AND expr
   38     | . expr OR expr
   39     | . expr AND2 expr
   40     | . expr OR2 expr
   41     | . expr LEFT_ASSIGN expr
   42     | . expr RIGHT_ASSIGN expr
   43     | . FUNCTION '(' formlist ')' cr expr_or_assign
   44     | . FUNCTION '(' formlist ')' cr ANNOTATION_OPERATOR datatype cr expr_or_assign
   45     | . FUNCTION '(' formlist ')' cr DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END cr expr_or_assign
   46     | . expr '(' sublist ')'
   47     | . IF ifcond expr_or_assign
   48     | . IF ifcond expr_or_assign ELSE expr_or_assign
   49     | . FOR forcond expr_or_assign
   50     | . WHILE cond expr_or_assign
   51     | . REPEAT expr_or_assign
   52     | . expr LBB sublist ']' ']'
   53     | . expr '[' sublist ']'
   54     | . SYMBOL NS_GET SYMBOL
   55     | . SYMBOL NS_GET STR_CONST
   56     | . STR_CONST NS_GET SYMBOL
   57     | . STR_CONST NS_GET STR_CONST
   58     | . SYMBOL NS_GET_INT SYMBOL
   59     | . SYMBOL NS_GET_INT STR_CONST
   60     | . STR_CONST NS_GET_INT SYMBOL
   61     | . STR_CONST NS_GET_INT STR_CONST
   62     | . expr '$' SYMBOL
   63     | . expr '$' STR_CONST
   64     | . expr '@' SYMBOL
   65     | . expr '@' STR_CONST
   66     | . NEXT
   67     | . BREAK
   68     | . ANNOTATION_OPERATOR datatype
   69     | . DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END
   99 annotated_symbol: . SYMBOL ANNOTATION_OPERATOR datatype
  100                 | . annotated_symbol ANNOTATION_OPERATOR datatype
  101                 | . SYMBOL DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END
  102                 | . annotated_symbol DELIMITED_ANNOTATION_BEGIN annotation DELIMITED_ANNOTATION_END

    STR_CONST                   shift, and go to state 3
    NUM_CONST                   shift, and go to state 4
    NULL_CONST                  shift, and go to state 5
    SYMBOL                      shift, and go to state 6
    FUNCTION                    shift, and go to state 7
    FOR                         shift, and go to state 8
    IF                          shift, and go to state 9
    WHILE                       shift, and go to state 10
    NEXT                        shift, and go to state 11
    BREAK                       shift, and go to state 12
    REPEAT                      shift, and go to state 13
    ANNOTATION_OPERATOR         shift, and go to state 14
    DELIMITED_ANNOTATION_BEGIN  shift, and go to state 15
    '?'                         shift, and go to state 16
    '~'                         shift, and go to state 17
    '+'                         shift, and go to state 18
    '-'                         shift, and go to state 19
    '('                         shift, and go to state 20
    '{'                         shift, and go to state 22
    '!'                         shift, and go to state 23

    expr              go to state 60
    annotated_symbol  go to state 28


State 17
